fix - overflow display.

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ body{
     height: 90px;
     border: solid, rgb(255, 255, 255);
     border-radius: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
+    margin: 10px;
+    padding: 5px;
     color: white;
     font-family: Helvetica, sans-serif;
     font-size: 50px;
@@ -21,6 +21,7 @@ body{
     justify-content: space-between;
     align-content: flex-end;
     align-items: flex-end;
+    overflow:scroll;
 }
 
 .topDisplay {
